--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="submit">Submit</string>
     <string name="register">Register</string>
     <string name="bypassLogin">Bypass Login</string>
+    <string name="showPunchline">Show Punchline</string>
 
 </resources>
