--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="password">Password</string>
     <string name="submit">Submit</string>
     <string name="register">Register</string>
-    <string name="bypassLogin">Bypass Login</string>
     <string name="showPunchline">Show Punchline</string>
-
+    <string name="previous">Prev</string>
+    <string name="next">Next</string>
 </resources>
