--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="showPunchline">Show Punchline</string>
     <string name="previous">Prev</string>
     <string name="next">Next</string>
+    <string name="logout">Logout</string>
+    <string name="remember_me">Remember Me</string>
 </resources>
