--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="next">Next</string>
     <string name="logout">Logout</string>
     <string name="remember_me">Remember Me</string>
+    <string name="joke_submission">Joke Submission</string>
 </resources>
