--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,8 @@
     <string name="sub_joke_button">Submit Joke</string>
     <string name="PAGE_PREFS">tcss450team3.uw.tacoma.edu.justjokes.PREFS</string>
     <string name="PAGE_NUMBER">Stored Page Num</string>
+    <string name="REMEMBER_ME">tcss450team3.uw.tacoma.edu.justjokes.PREFS</string>
+    <string name="REMEMBERED">Remembered</string>
+    <string name="RM_USERNAME">Stored Username</string>
+    <string name="RM_PASSWORD">Stored Password</string>
 </resources>
