Javadoced everything, plus cleaned up the code a little.
Added comments, removed any code that we no longer needed, cleaned up some stuff. Fixed a minor bug that occurred because the JokeTitle wasn't UTF-8 encoded in the buildURL function in the SubmitJoke class (mb lol). Also moved PageDB to the data package.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="submit">Submit</string>
     <string name="register">Register</string>
     <string name="showPunchline">Show Punchline</string>
+    <string name="hidePunchline">Hide Punchline</string>
     <string name="previous">Prev</string>
     <string name="next">Next</string>
     <string name="logout">Logout</string>
